fixed spacing of yoga about section

--- a/src/scss/assignment2.scss
+++ b/src/scss/assignment2.scss
@@ -231,7 +231,7 @@ ul.timeline > li:before {
     text-align: left;
     margin: 0 auto;
     display: table;
-    width: auto;
+    width: 75%;
 }
 
 .about-card {
@@ -240,6 +240,7 @@ ul.timeline > li:before {
     box-shadow: none;
     vertical-align: middle;
     display: table-cell;
+    width: 100%;
 }
 
 .yoga-teaching {
